# ampscz-formsdb

./: .gitignore  README.md  config.ini  config.sample.ini  eris.config.ini  pnl.config.ini  prod.config.ini  pyproject.toml  sample.mongod.conf
cron/: cognitive_forms.sh
cron/dags/: flush_dpdash.py  flush_dpdash_prod.py  flush_dpdash_staging.py  forms.py  forms_qc_legacy.py  formsdb_compute.py  formsdb_dpdash_import.py  formsdb_dpdash_import_blood.py  formsdb_dpdash_import_charts.py  formsdb_export_combined_csv.py  formsdb_export_csvs.py  formsdb_import.py
cron/dags/v2/: formsdb_compute.py  formsdb_export_combined_csv.py  formsdb_export_csvs.py  formsdb_import.py  prescient_minio_sync.py
data/: forms_per_timepoint.json  sites.json
docs/: dataflow.md
formsdb/: __init__.py  constants.py  data.py
formsdb/helpers/: airflow.py  cli.py  db.py  dpdash.py  utils.py
formsdb/models/: forms.py  upenn_forms.py
formsdb/runners/archive/: export_mongo_to_psql.py  import_jsons.py
formsdb/runners/compute/: compute_blood_metrics.py  compute_cogntion.py  compute_converted.py  compute_medication.py  compute_medication_effects.py  compute_medication_effects_by_class.py  compute_nda_upload_eligibility.py  compute_removed.py  (+5 more)
formsdb/scripts/: compute.py  export.py  import.py  init_psql.py  prepare_dpdash_metadata.py  wipe_dpdash.py
formsqc/: __init__.py  constants.py  data.py  main.py
formsqc/helpers/: cli.py  db.py  dpdash.py  hash.py  utils.py
formsqc/models/: __init__.py  forms.py  upenn_forms.py
formsqc/scripts/: compute.py  export.py  import.py  init_psql.py
(+47 files in other folders)
